# Orange

./: .bochsrc  .gitignore  CMakeLists.txt  LICENSE  Makefile
include/kernel/arch/i686/cpu/: gdt.h  idt.h  isr.h  tss.h
include/kernel/arch/i686/mem/: alloc.h  mem.h  paging.h  rcrw.h
include/kernel/arch/i686/misc/: panic.h  utils.h
include/kernel/boot/: multiboot.h
include/kernel/common/boot/: multiboot.h
include/kernel/common/io/: tty.h  vga.h
include/kernel/cpu/: gdt.h  idt.h  isr.h  tss.h
include/kernel/io/: tty.h  vga.h
include/kernel/mem/: alloc.h  paging.h  rcrw.h
include/kernel/misc/: utils.h
include/kernel/ps2/: ps2.h
include/libc/: assert.h  stdio.h  stdlib.h  string.h
include/libc/sys/: cdefs.h
scripts/: build  clean  install  setup
src/kernel/: CMakeLists.txt  kernel.c
src/kernel/arch/i686/boot/: boot.S  crti.S  crtn.S  linker.ld
src/kernel/arch/i686/cpu/: gdt.S  gdt.c  idt.S  idt.c  irq.S  isr.S  isr.c  tss.S
src/kernel/arch/i686/mem/: alloc.c  mem.c  paging.c
src/kernel/arch/i686/misc/: panic.c  utils.c
src/kernel/boot/: boot.S
src/kernel/common/io/: vga.c
src/kernel/cpu/: gdt.c  idt.S  idt.c  irq.S  isr.S  isr.c  tss.S
src/kernel/io/: vga.c
src/kernel/mem/: alloc.c  mem.c  paging.c  rcrw.S
src/kernel/misc/: panic.c  utils.c
src/kernel/ps2/: ps2.c
src/libc/: CMakeLists.txt
src/libc/stdio/: printf.c  putchar.c
src/libc/stdlib/: abort.c
src/libc/string/: memset.c  strlen.c
